v1.1.16 20170523
* Fix task status query methods to work correctly within subworkflows
v1.1.15 20170519
* Add new launchTasksUntil demo
* Add new WorkflowRunner.cancelTaskTree() method
* Add new WorkflowRunner.isTaskDone() method
* Add automated source formatting scripts
v1.1.14 20170112
* STREL-391 improve task throughput for nodes with 100's of cores
v1.1.13 20160414
* fix rare issue with sets of dependent checkpoint tasks
* fix for travis CI script from Dominic Jodoin
v1.1.12 20151203
* lengthen signal file delay tolerance to 4 mins
* [#14] Filter environment variables to remove bash functions. This
eliminates complications between shellshock bash update and SGE.
v1.1.11 20151125
* Improve SGE robustness
v1.1.10 20150927
* Remove old custom cluster SGE logic and standardize on h_vmem
v1.1.9 20150923
* Add windows CI script to run cross-platform tests on master
* Add new cross-platform test script and adjust all unit tests
to run on windows
* Improve error reporting for missing signal file case
v1.1.8 20150918
* Improve windows shell compatibility
* [#10] If an error occurs creating the task visualization script,
issue warning and allow workflow to continue
v1.1.7 20150806
* [#9] improve robustness to filesystem delays for task
wrapper parameter file
* [#9] improve error log specificity when anomolous task
wrapper output occurs in localhost run mode
v1.1.6 20150713
* Fix multithread conflict introduced by [#5] fix
v1.1.5 20150710
* Changed to BSD 2-Clause license
* [#5] fix in-workflow check for nested workflows
v1.1.4 20150527
* added check for local SMTP service before sending email notification
* added extra check aginst workflow methods running outside of pyflow runtime
v1.1.3 20141028
* fix master node memory spike for SGE jobs identified by Lilian Janin
* added Windows OS patches form Tobias Mann
v1.1.2 20131026
* added python distutils setup.py provided by Ryan Kelley
v1.1.1 20130716
* fix issue with new startFromTasks feature when used with subWorkflows